--- a/front/app/styles/global-styles.scss
+++ b/front/app/styles/global-styles.scss
@@ -5,21 +5,21 @@ body {
 }
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Ubuntu';
 }
 
 body.fontLoaded {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Ubuntu';
 }
 
 #app {
-  background-color: #fafafa;
+  background-color: $light;
   min-height: 100%;
   min-width: 100%;
 }
 
 p,
 label {
-  font-family: Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Ubuntu';
   line-height: 1.5em;
 }
