--- a/front/app/components/Argument/style.scss
+++ b/front/app/components/Argument/style.scss
@@ -9,6 +9,14 @@
 	text-align: left;
 }
 
+.card.is-success {
+	background-color: lighten(desaturate($success, 20%), 10%);
+}
+
+.card.is-danger {
+	background-color: lighten(desaturate($danger, 20%), 10%);
+}
+
 .arg-header-title {
 	font-weight: 400;
 }
@@ -32,4 +40,11 @@
 
 .control {
 	float: right;
+}
+
+.arg-buttons {
+	color: white;
+	:hover {
+		color: black;
+	}
 }
