--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -33,3 +33,4 @@ $input-shadow: none;
 @import "../../node_modules/bulma/sass/layout/section.sass";
 
 @import './global-styles.scss';
+@import './modals.scss';
