--- a/front/app/components/NavBar/looks/style.scss
+++ b/front/app/components/NavBar/looks/style.scss
@@ -1,5 +1,8 @@
-@import "../../styles/theme.scss";
+@import "../../../styles/theme.scss";
 
+.login-input {
+	width: 100%;
+}
 
 .navbar-section.section.tbp-section {
 	background-color: #D2DDC3;
