--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -31,6 +31,7 @@ $input-shadow: none;
 @import "../../node_modules/bulma/sass/components/navbar.sass";
 @import "../../node_modules/bulma/sass/layout/hero.sass";
 @import "../../node_modules/bulma/sass/layout/section.sass";
+@import "../../node_modules/bulma-divider/dist/css/bulma-divider.sass";
 
 @import './global-styles.scss';
 @import './modals.scss';
