--- a/front/app/styles/global-styles.scss
+++ b/front/app/styles/global-styles.scss
@@ -77,11 +77,11 @@ label {
 }
 
 .level-left {
-  max-width: 90%;
+  max-width: 80%
 }
 
 .level-right {
-  max-width: 30%;
+  max-width: 10%;
 }
 
 .level.is-mobile {
