--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -7,11 +7,13 @@
 
 // Update Bulma's global variables
 $family-sans-serif: "Ubuntu", sans-serif;
-$primary-1: #033f63;
-$primary-2: #40798c;
-$primary-3: #fdfffc;
+$primary-1: #ffc857;
+$primary-2: #db3a34;
+$primary-3: #177e89;
 $primary-4: #c1292e;
 $primary-5: #f1d302;
+$dark: #1f2041;
+$light: #f4e5d9;
 $widescreen-enabled: true;
 $fullhd-enabled: true;
 
