--- a/front/app/styles/global-styles.scss
+++ b/front/app/styles/global-styles.scss
@@ -13,7 +13,8 @@ body.fontLoaded {
 }
 
 #app {
-  background-color: $light;
+  background-color: $dark;
+  color: $light;
   min-height: 100%;
   min-width: 100%;
 }
@@ -30,7 +31,7 @@ label {
 }
 
 .tbp-section {
-  padding: 1rem 0.5rem;
+  padding: 0 0.5rem;
 }
 
 .list-title {
@@ -69,7 +70,12 @@ label {
   }
 }
 
+.title {
+  color: $light;
+}
+
 .subtitle {
+  color: $light;
   padding-top: 1rem;
 }
 
