--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -14,8 +14,8 @@ $primary-4: #c1292e;
 $primary-5: #f1d302;
 $dark: #1f2041;
 $light: #f4e5d9;
-$widescreen-enabled: true;
-$fullhd-enabled: true;
+$widescreen-enabled: false;
+$fullhd-enabled: false;
 
 // Update some of Bulma's component variables
 $body-background-color: $primary-1;
