--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -7,9 +7,9 @@
 
 // Update Bulma's global variables
 $family-sans-serif: "Ubuntu", sans-serif;
-$primary-1: #ffc857;
-$primary-2: #db3a34;
-$primary-3: #177e89;
+$primary-1: #ffcf70;
+$primary-2: #db6662;
+$primary-3: #4a8389;
 $primary-4: #c1292e;
 $primary-5: #f1d302;
 $dark: #1f2041;
