--- a/front/app/containers/pages/BigPicture/style.scss
+++ b/front/app/containers/pages/BigPicture/style.scss
@@ -16,6 +16,12 @@
 	}
 }
 
+.button.tbp-radio {
+	color: $dark;
+	background-color: $light;
+	margin-right: 0.5rem;
+}
+
 .author-icon {
 	padding-right: 0.3rem;
 }
