--- a/front/app/containers/pages/BigPicture/style.scss
+++ b/front/app/containers/pages/BigPicture/style.scss
@@ -6,6 +6,7 @@
 		color: $light;
 	}
 }
+
 .tbp-context {
 	padding-top: 0.5rem;
 	margin-bottom: 0;
@@ -14,6 +15,18 @@
 		margin: 0;
 		font-weight: 600;
 	}
+}
+
+p.subtitle.level-item.vde-subtitle-bp-page {
+    font-weight: 700;
+    padding: 0.5rem;
+    font-size: xx-large;
+}
+
+span.vde-button.is-narrow.level-item.button.tbp-radio {
+	color: $dark;
+	background-color: $light;
+	margin-right: 0.5rem;
 }
 
 .button.tbp-radio {
@@ -47,4 +60,10 @@ p.tbp-description {
 
 .hero {
 	margin: 0.6rem 0;
+}
+
+div.vde-bigpicture-page {
+  .container.tbp-section.section-field {
+    padding-bottom: 1rem;
+  }
 }
