--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -10,7 +10,7 @@ $family-sans-serif: "Ubuntu", sans-serif;
 $primary-1: #ffcf70;
 $primary-2: #db6662;
 $primary-3: #4a8389;
-$primary-4: #c1292e;
+$primary-4: #C1C1C1;
 $primary-5: #f1d302;
 $dark: #1f2041;
 $light: #f4e5d9;
