--- a/front/app/components/utils/style.scss
+++ b/front/app/components/utils/style.scss
@@ -4,7 +4,7 @@ a.vde-loadmore.subtitle {
 	color: $light;
     text-align: center;
     font-size: medium;
-    margin: 0;
+    margin: 0 0.5rem;
     padding-top: 0.5rem;
     padding-bottom: 1rem;
 }
