--- a/back/api/templates/base.html
+++ b/back/api/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Simple is Better Than Complex{% endblock %}</title>
+    <title>{% block title %}VDE{% endblock %}</title>
   </head>
   <link rel="stylesheet" type="text/css" href="https://vde-staticfiles.s3.eu-west-3.amazonaws.com/static/extra-css/admin-extra.css" />
   <body>
