--- a/front/app/containers/pages/BigPicture/style.scss
+++ b/front/app/containers/pages/BigPicture/style.scss
@@ -46,7 +46,7 @@ span.vde-button.is-narrow.level-item.button.tbp-radio {
 }
 
 
-p.tbp-description {
+div.tbp-description {
 	color: $dark;
 	font-size: 1rem;
 	font-weight: 400;
