--- a/front/app/components/Buttons/style.scss
+++ b/front/app/components/Buttons/style.scss
@@ -6,6 +6,7 @@ span.vde-button.is-narrow.level-item {
 	margin-right: 0.3rem;
 	border-width: 0;
 	width: 2.3rem;
+	height: 2.3rem;
 
 	a {
 		color: $dark;
