--- a/front/app/containers/pages/BigPicture/style.scss
+++ b/front/app/containers/pages/BigPicture/style.scss
@@ -7,16 +7,6 @@
 	}
 }
 
-.tbp-context {
-	padding-top: 0.5rem;
-	margin-bottom: 0;
-	h2.subtitle {
-		padding: 0;
-		margin: 0;
-		font-weight: 600;
-	}
-}
-
 p.subtitle.level-item {
     font-weight: 700;
     padding: 0.5rem;
@@ -56,6 +46,10 @@ div.tbp-description {
 	color: $dark;
 	font-size: 1rem;
 	font-weight: 400;
+
+	h2 {
+
+	}
 	padding-top: 0.5rem;
 }
 
