--- a/front/app/components/Rating/style.scss
+++ b/front/app/components/Rating/style.scss
@@ -10,8 +10,9 @@ p.vde-no-comment {
 	padding: 0.5rem;
 }
 
-.vde-preview-content {
-	padding: 12px;
+.card-content.vde-preview-content {
+	padding: 0;
+	margin: 0.7rem;
 }
 
 .tbp-star {
