--- a/front/app/containers/pages/BigPicture/style.scss
+++ b/front/app/containers/pages/BigPicture/style.scss
@@ -13,21 +13,16 @@ p.subtitle.level-item {
     font-size: xx-large;
 }
 
-div.tbp-description {
-	p {
-		margin-bottom: 1rem;
-	}
-}
-
 span.vde-button.is-narrow.level-item.button.tbp-radio {
 	color: $dark;
-	background-color: $light;
+	background-color: $primary-5;
 }
 
 .button.tbp-radio {
 	color: $dark;
-	background-color: $light;
+	background-color: $primary-5;
 	margin-right: 0.5rem;
+	border-width: inherit;
 }
 
 .author-icon {
@@ -36,35 +31,19 @@ span.vde-button.is-narrow.level-item.button.tbp-radio {
 
 .hero {
 	.title {
-		color: $dark;
+		color: $primary-1;
 	}
-	padding: 1rem 0;
-}
-
-
-div.tbp-description.card.bp-tile {
-	color: $dark;
-	font-size: 1rem;
-	background-color: $light;
-	h2 {
-
-	}
-	strong {
-		color: $dark
-	}
-	padding: 1rem;
+	background-color: $primary-4;
+	padding: 0.7rem 0;
+	margin-top: 7rem;
 }
 
 .filter.checkbox:hover {
 	color: $light;
 }
 
-.hero {
-	margin: 0.6rem 0;
-}
-
 div.vde-bigpicture-page {
-  .container.tbp-section.section-field {
+  .container.vde section.section-field {
     padding-bot: 1rem;
   }
 }
