--- a/front/app/styles/global-styles.scss
+++ b/front/app/styles/global-styles.scss
@@ -14,9 +14,10 @@ body.fontLoaded {
 
 #app {
   background-color: $dark;
-  color: $light;
+  color: $dark;
   min-height: 100%;
   min-width: 100%;
+  margin-top: 5.5rem;
 }
 
 p,
@@ -30,83 +31,26 @@ label {
 	padding-right: 1rem;
 }
 
-.tbp-section {
-  padding: 0 0.5rem;
+.vde.container.section {
+  padding: 0.6rem;
 }
 
-.list-title {
+a {
+  color: $dark;
 }
 
-.section {
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.level {
-  margin: 0;
-}
-
-.level:not(:last-child) {
-  margin-bottom: 0;
-}
-
-.card.bp-tile {
-  border-radius: 10px;
-  box-shadow: inset 0 0 3px;
-  background-color: $light;
-}
-
-.column {
-  padding: 0;
-  margin: 0.5rem;
-}
-
-.card {
-  width: 100%;
-  padding: 0;
-  margin-right: 0.5rem;
-
-  .card-header {
-    width: 100%;
-  }
-
-  .card-content {
-    width: 100%;
-  }
-}
-
-.title {
-  color: $light;
-}
-
-.subtitle {
-  color: $light;
-  padding-top: 1rem;
-}
-
-.level-left {
-  max-width: 100%
-}
-
-.level-right {
-  max-width: 50%;
-}
-
-.level.vde-header.is-mobile {
+.vde.level {
   margin: 0.7rem 0;
 }
 
-.level.is-mobile {
-  .level-item:not(:last-child) {
-    margin-right: .1rem;
-  }  
+.vde.level:not(:last-child) {
+  margin-bottom: 0;
 }
 
-div.level.is-mobile {
-  margin-top: 0rem;
+.vde.subtitle {
+  color: $light;
 }
 
-div.level.is-mobile.no-top-margin {
+.vde.no.margin.top {
   margin-top: 0;
 }
