--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -1,22 +1,19 @@
 
 @charset "utf-8";
 
-// Import a Google Font
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
-
-
 // Update Bulma's global variables
 $family-sans-serif: "Ubuntu", sans-serif;
-$primary-1: #ffcf70;
-$primary-2: #db6662;
-$primary-3: #4a8389;
-$primary-4: #C1C1C1;
-$primary-5: #f1d302;
+$primary-1: #1F2041;
+$primary-2: #281346;
+$primary-3: #635380;
+$primary-4: #D4D4D4;
+$primary-5: #f4e5d9;
 
 $dark: #1f2041;
 $light: #f4e5d9;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
+$navsize: 5.5rem;
 
 // Update some of Bulma's component variables
 $body-background-color: $primary-1;
