--- a/front/app/components/BigPicture/style.scss
+++ b/front/app/components/BigPicture/style.scss
@@ -54,6 +54,7 @@
   color: $primary-3;
 }
 
-.vde.level-item.image.is-32x32.bp-icons {
+.vde.bp-icons {
 	color: $primary-1;
+	font-size: xx-large;
 }
