--- a/front/app/components/utils/style.scss
+++ b/front/app/components/utils/style.scss
@@ -1,10 +1,18 @@
 @import "../../styles/theme.scss";
 
 a.vde-loadmore.subtitle {
-	color: $light;
+  color: $light;
     text-align: center;
     font-size: medium;
     margin: 0 0.5rem;
     padding-top: 0.5rem;
     padding-bottom: 1rem;
+}
+
+.vde.level.is-mobile.searchbar {
+  margin-bottom: 1rem;
+
+  .level-item.control {
+    max-width: calc(100% - 3rem);
+  }
 }
