--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -16,7 +16,7 @@ $fullhd-enabled: false;
 $navsize: 5.5rem;
 
 // Update some of Bulma's component variables
-$body-background-color: $primary-1;
+$body-background-color: $light;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
