--- a/front/app/components/utils/style.scss
+++ b/front/app/components/utils/style.scss
@@ -11,6 +11,8 @@ a.vde-loadmore.subtitle {
 
 .vde.level.is-mobile.searchbar {
   margin-bottom: 1rem;
+  padding-top: 0;
+  margin-top: 0;
 
   .level-item.control {
     max-width: calc(100% - 3rem);
