--- a/front/app/styles/global-styles.scss
+++ b/front/app/styles/global-styles.scss
@@ -17,7 +17,9 @@ body.fontLoaded {
   color: $dark;
   min-height: 100%;
   min-width: 100%;
-  margin-top: 5.5rem;
+  top: 5.5rem;
+  padding-top: 1rem;
+  position: absolute;
 }
 
 p,
@@ -28,7 +30,7 @@ label {
 }
 
 .preview-item-level {
-	padding-right: 1rem;
+  padding-right: 1rem;
 }
 
 .vde.container.section {
