--- a/front/app/components/List/style.scss
+++ b/front/app/components/List/style.scss
@@ -1,11 +1,41 @@
 @import "../../styles/theme.scss";
 
 .vde.header-button {
-	color: $light;
+  color: $light;
 }
 
 
 .vde.header-button:focus,
 .vde.header-button:hover {
-	color: $primary-4;
+  color: $primary-4;
+}
+
+a.vde-loadmore.subtitle {
+  color: $light;
+    text-align: center;
+    font-size: medium;
+    margin: 0 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
+}
+
+.vde.level.is-mobile.searchbar {
+  margin-bottom: 1rem;
+  padding-top: 0;
+  margin-top: 0;
+
+  .level-item.control {
+    max-width: calc(100% - 6rem);
+  }
+}
+
+
+.favorites-button.button.tbp-radio.title-button:hover,
+.favorites-button.button.tbp-radio.title-button {
+  color: $primary-1;
+}
+
+.favorites-button.button.tbp-radio.title-button.is-active:hover,
+.favorites-button.button.tbp-radio.title-button.is-active {
+  color: red;
 }
