change follow button's red

--- a/front/app/components/List/style.scss
+++ b/front/app/components/List/style.scss
@@ -37,5 +37,5 @@ a.vde-loadmore.subtitle {
 
 .favorites-button.button.tbp-radio.title-button.is-active:hover,
 .favorites-button.button.tbp-radio.title-button.is-active {
-  color: red;
+  color: #E83A00;
 }
