--- a/front/app/components/BigPicture/style.scss
+++ b/front/app/components/BigPicture/style.scss
@@ -10,6 +10,8 @@
   padding: 0;
   margin: 0.7rem 0;
 
+  box-shadow: 0 2px 3px rgba(20,20,20,.3), 0 0 0 2px rgba(20,20,20,.3);
+
   .vde.card-header {
     width: 100%;
     padding: var(--basic-padding);
@@ -55,6 +57,6 @@
 }
 
 .vde.bp-icons {
-	color: $primary-1;
-	font-size: xx-large;
+  color: $primary-1;
+  font-size: xx-large;
 }
