hotfix activation templates

--- a/back/api/templates/django_registration/activation_complete.html
+++ b/back/api/templates/django_registration/activation_complete.html
@@ -2,6 +2,6 @@
 
 {% block content %}
   <h2>Votre compte a été activé</h2>
-  <p>Vous pouvez désormais vous connecter sur vue-d-ensemble.fr, commenter les contenus et créer les votres.</p>
-  <a href="https://vue-d-ensemble.fr">Cliquez ici pour vous rendre sur le site</a>
+  <p>Vous pouvez désormais vous connecter sur vuedensemble.org, commenter les contenus et créer les votres.</p>
+  <a href="https://vuedensemble.org">Cliquez ici pour vous rendre sur le site</a>
 {% endblock %}
