--- a/back/api/templates/django_registration/activation_failed.html
+++ b/back/api/templates/django_registration/activation_failed.html
@@ -2,5 +2,5 @@
 
 {% block content %}
   <h2>L'activation de votre compte a échoué</h2>
-  <p>Contactez diplo@vue-d-ensemble.fr pour corriger le problème.</p>
+  <p>Contactez diplo@vuedensemble.org pour corriger le problème.</p>
 {% endblock %}
