--- a/front/app/components/List/style.scss
+++ b/front/app/components/List/style.scss
@@ -38,5 +38,5 @@
 
 .favorites-button.button.tbp-radio.title-button.is-active:hover,
 .favorites-button.button.tbp-radio.title-button.is-active {
-  color: #E83A00;
+  color: $red;
 }
