--- a/front/app/styles/theme.scss
+++ b/front/app/styles/theme.scss
@@ -9,8 +9,10 @@ $primary-3: #635380;
 $primary-4: #D4D4D4;
 $primary-5: #f4e5d9;
 
+$red: #E83A00;
 $dark: #1f2041;
 $light: #f4e5d9;
+
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 $navsize: 5.5rem;
