--- a/front/app/components/BigPicture/style.scss
+++ b/front/app/components/BigPicture/style.scss
@@ -56,6 +56,12 @@
   }
 }
 
+.vde.card.pin {
+  border: inset;
+  border-color: gold;
+  border-width: 0.4rem;
+}
+
 .vde.toolbar.menu.image {
   height: 1.3rem;
 }
