add activity tracking; add create icon when not signed in

--- a/front/app/containers/NavBar/style.scss
+++ b/front/app/containers/NavBar/style.scss
@@ -81,6 +81,7 @@ span.home-add-bp a .icon {
 
 .vde.navbar.image.is-32x32 {
   color: $dark;
+  font-size: x-large;
   background: transparent;
 }
 
