--- a/front/app/components/Endorsment/style.scss
+++ b/front/app/components/Endorsment/style.scss
@@ -3,3 +3,7 @@
 .vde.card.endorsment {
   background-color: $primary-4;
 }
+
+.button.tbp-radio.removeendorsment {
+  background-color: $primary-4;
+}
